<?xml version="1.0" encoding="utf-8"?>
<com.qubacy.geoqq.ui.common.visual.component.loadingscreen.LoadingScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/max_elevation"
    tools:theme="@style/Theme.Geoqq.GeoChat">

    <FrameLayout
...
